<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_OPCUA_NodeVariablePair_INT" Id="{9d67db6b-834c-4a93-a4cb-3d3d6d66b565}">
    <Declaration><![CDATA[TYPE ST_OPCUA_NodeVariablePair_INT :
STRUCT
	clientVariable : INT;
	clientVariableInfo : __SYSTEM.VAR_INFO;
	serverNodeIdentifier : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>